fix head and btn on mobile layout

--- a/css/global.sass
+++ b/css/global.sass
@@ -26,6 +26,7 @@ a
     transition: all 0.3s ease
 
     .nav-container 
+        width: 100%
         display: flex
         justify-content: space-between
         align-items: center
@@ -66,7 +67,7 @@ a
 // NAV CLASS TOGGLE
 .toggle 
     background: $cBlack
-    padding: 1rem !important
+    padding: 1rem 0 !important
 
 // HAMBURGER MENU
 .hamburger-menu 
