--- a/css/queries.sass
+++ b/css/queries.sass
@@ -12,3 +12,29 @@
 
             br.break 
                 display: block !important
+
+
+    .section-1
+        height: auto
+
+        .reflector
+            display: flex !important
+            flex-direction: column
+
+            img 
+                height: auto !important
+                width: auto !important
+
+            .card 
+                position: relative
+                padding: 100px 0 0
+
+                text-align: center
+
+    .section-2 
+        
+        .section-head 
+            justify-content: center !important
+
+            .btn 
+                display: none
